# smallpt-rust

./: .gitignore  Cargo.toml  README.md  build.rs
src/: agent.rs  api.rs  gui.rs  main.rs  radiance.rs  render.rs  scene.rs
